k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrum-poker-server
spec:
  selector:
    role: server
  ports:
    - protocol: TCP
      port: 80
