k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: scrum-poker
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: scrumpoker.dustinchilson.com
      http:
        paths:
          - path: /
            backend:
              serviceName: scrum-poker-server
              servicePort: 80
